--- a/index.html
+++ b/index.html
@@ -5,250 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alex Cotano Bueno - CV</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Inter','Segoe UI', sans-serif;
-            background-color: #f5f5f5;
-            padding: 40px 20px;
-        }
-
-        .contenidor {
-            max-width: 850px;
-            margin: 0 auto;
-            background: white;
-            border: 3px solid #4A90E2;
-            border-radius: 8px;
-            overflow: hidden;
-        }
-
-        .capçalera {
-            padding: 40px 50px;
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            border-bottom: 2px solid #e0e0e0;
-        }
-
-        .capçalera-esquerra {
-            flex: 1;
-        }
-
-        .nom {
-            font-size: 32px;
-            font-weight: 700;
-            color: #1a1a1a;
-            margin-bottom: 5px;
-        }
-
-        .titol {
-            font-size: 18px;
-            color: #4A90E2;
-            margin-bottom: 25px;
-        }
-
-        .info-contacte {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        .item-contacte {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            font-size: 13px;
-            color: #333;
-        }
-
-        .item-contacte::before {
-            content: '';
-            width: 16px;
-            height: 16px;
-            display: inline-block;
-        }
-
-        .correu::before {
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%234A90E2"><path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>') no-repeat center;
-        }
-
-        .telefon::before {
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%234A90E2"><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/></svg>') no-repeat center;
-        }
-
-        .ubicacio::before {
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%234A90E2"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg>') no-repeat center;
-        }
-
-        .linkedin::before {
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%234A90E2"><path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"/></svg>') no-repeat center;
-        }
-
-        .foto-perfil {
-            width: 120px;
-            height: 120px;
-            border-radius: 50%;
-            background: #e0e0e0;
-            margin-left: 30px;
-            flex-shrink: 0;
-            overflow: hidden;
-        }
-
-        .foto-perfil img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .contingut {
-            display: flex;
-            padding: 40px 50px;
-        }
-
-        .columna-esquerra {
-            flex: 1.5;
-            padding-right: 40px;
-        }
-
-        .columna-dreta {
-            flex: 1;
-            padding-left: 40px;
-            border-left: 2px solid #e0e0e0;
-        }
-
-        .seccio {
-            margin-bottom: 35px;
-        }
-
-        .titol-seccio {
-            font-size: 11px;
-            font-weight: 600;
-            color: #999;
-            text-transform: uppercase;
-            letter-spacing: 1.5px;
-            margin-bottom: 20px;
-        }
-
-        .titol-feina {
-            font-size: 16px;
-            font-weight: 700;
-            color: #1a1a1a;
-            margin-bottom: 5px;
-        }
-
-        .empresa {
-            font-size: 14px;
-            color: #4A90E2;
-            margin-bottom: 5px;
-        }
-
-        .data-ubicacio {
-            font-size: 12px;
-            color: #666;
-            margin-bottom: 12px;
-        }
-
-        .descripcio {
-            font-size: 13px;
-            color: #333;
-            line-height: 1.6;
-            margin-bottom: 8px;
-        }
-
-        .descripcio::before {
-            content: '• ';
-            color: #4A90E2;
-        }
-
-        .item-educacio {
-            margin-bottom: 25px;
-        }
-
-        .grau {
-            font-size: 16px;
-            font-weight: 700;
-            color: #1a1a1a;
-            margin-bottom: 5px;
-        }
-
-        .institucio {
-            font-size: 14px;
-            color: #4A90E2;
-            margin-bottom: 5px;
-        }
-
-        .graella-fortaleses {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 15px;
-            margin-top: 15px;
-        }
-
-        .item-fortalesa, .item-passio {
-            display: flex;
-            align-items: flex-start;
-            gap: 10px;
-            font-size: 13px;
-            color: #333;
-        }
-
-        .icona {
-            width: 24px;
-            height: 24px;
-            flex-shrink: 0;
-        }
-
-        .text-resum {
-            font-size: 13px;
-            color: #333;
-            line-height: 1.7;
-            margin-top: 10px;
-        }
-
-        .categoria-habilitats {
-            margin-bottom: 20px;
-        }
-
-        .titol-categoria {
-            font-size: 14px;
-            font-weight: 600;
-            color: #4A90E2;
-            margin-bottom: 10px;
-        }
-
-        .llista-habilitats {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 8px;
-        }
-
-        .etiqueta-habilitat {
-            padding: 5px 12px;
-            background: #f0f0f0;
-            border-radius: 4px;
-            font-size: 12px;
-            color: #333;
-            border: 1px solid #e0e0e0;
-        }
-
-        .llista-idiomes {
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-            margin-top: 10px;
-        }
-
-        .item-idioma {
-            font-size: 13px;
-            color: #333;
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="contenidor">
